workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/SeguradoProposta_Event__e.object-meta.xml
<CustomObject>
    <label>SeguradoProposta Event</label>
    <pluralLabel>SeguradoProposta Events</pluralLabel>
</CustomObject>