workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/CartaoCredito__c.field-meta.xml
<CustomField>
    <fullName>CartaoCredito__c</fullName>
    <label>CartaoCredito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>