workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/DescontoAgravoPercentualTecnico__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoPercentualTecnico__c</fullName>
    <label>DescontoAgravoPercentualTecnico</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>