workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/EnderecoBoleto__c.field-meta.xml
<CustomField>
    <fullName>EnderecoBoleto__c</fullName>
    <label>EnderecoBoleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>