workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>FormaPagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>