workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/GrupoProposta__c.field-meta.xml
<CustomField>
    <fullName>GrupoProposta__c</fullName>
    <label>GrupoProposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>