workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/InformacaoBancaria__c.field-meta.xml
<CustomField>
    <fullName>InformacaoBancaria__c</fullName>
    <label>InformacaoBancaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>