workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/IOF__c.field-meta.xml
<CustomField>
    <fullName>IOF__c</fullName>
    <label>IOF</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>