workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/PlanoParcelamento__c.field-meta.xml
<CustomField>
    <fullName>PlanoParcelamento__c</fullName>
    <label>PlanoParcelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>