workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/PorcentagemParticipacaoVida__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemParticipacaoVida__c</fullName>
    <label>PorcentagemParticipacaoVida</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>