workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/PremioComercial__c.field-meta.xml
<CustomField>
    <fullName>PremioComercial__c</fullName>
    <label>PremioComercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>