workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/PremioPuro__c.field-meta.xml
<CustomField>
    <fullName>PremioPuro__c</fullName>
    <label>PremioPuro</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>