workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/Reenquadramento__c.field-meta.xml
<CustomField>
    <fullName>Reenquadramento__c</fullName>
    <label>Reenquadramento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>