workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/ResponsavelPagamento__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelPagamento__c</fullName>
    <label>ResponsavelPagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>