workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/TipoResponsavelPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoResponsavelPagamento__c</fullName>
    <label>TipoResponsavelPagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>