workspace-sf/force-app/main/default/objects/SeguradoProposta_Event__e/fields/VencimentoPrimeiraParcela__c.field-meta.xml
<CustomField>
    <fullName>VencimentoPrimeiraParcela__c</fullName>
    <label>VencimentoPrimeiraParcela</label>
    <type>Date</type>
</CustomField>